XWIKI-12055: Display the diff summary before the extension changes * Documents from transitive dependencies can appear multiple times if the corresponding extension appears multiple times in the dependency tree * The previous version is not properly set (should be the extension id) * DocumentVersionReference#getVersion() is not public * Display the previous and the next version for each changed document (in order to know the extension that provides the document).

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/viewers/diff.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/viewers/diff.css
@@ -113,6 +113,13 @@ dl.diff-group > dd > dl {
   color: #D0B44C;
 }
 
+.diff-item-hint {
+  color: $theme.textSecondaryColor;
+  display: block;
+  font-size: 65%;
+  margin-top: .3em;
+}
+
 ul.diff-summary {
   padding-left: 0;
 }
