--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/progress_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/progress_macros.vm
@@ -19,7 +19,7 @@
     #set($elapsedTimePercent = 100)
   #end
 
-  <li>$progressStep.message #printElapsedTime($elapsedTime) ($mathtool.toInteger($elapsedTimePercent)%)</li>
+  <li>$progressStep.message #printElapsedTime($elapsedTime) ($mathtool.toInteger($elapsedTimePercent)%)
   #if ($progressStep.children.size() > 0)
     <ul>
       #foreach($child in $progressStep.children)
@@ -27,9 +27,12 @@
       #end
     </ul>
   #end
+  </li>
 #end
 
 #macro (printProgress $progress)
   #set($rootStep = $services.debug.actionProgress.rootStep)
+  <ul>
   #printProgressStep($rootStep $rootStep.elapsedTime)
+  </ul>
 #end
