XWIKI-12114: Add an option to disable the automatic start of Distribution Wizard.

--- a/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
+++ b/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
@@ -486,6 +486,16 @@ rendering.transformations = $xwikiRenderingTransformations
 # extension.userAgent=XWikiExtensionManager
 
 #-------------------------------------------------------------------------------------
+# Distribution Wizard
+#-------------------------------------------------------------------------------------
+
+#-# [Since 7.1RC1] Enable or disable the automatic start of Distribution Wizard on empty/outdated wiki.
+#-#
+#-# The default is:
+# distribution.automaticStartOnMainWiki=true
+# distribution.automaticStartOnWiki=true
+
+#-------------------------------------------------------------------------------------
 # Solr Search
 #-------------------------------------------------------------------------------------
 
