[Misc] "null" doesn't exist in Velocity, use a non-existing $NULL variable instead to represent null

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/getusers.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/getusers.vm
@@ -18,7 +18,7 @@ $response.setContentType("application/x-json")
      #foreach( $i in $params.get( $key ) ) #set( $value = $i ) #end
      #if( $docProps.contains( $key ))
         #set ($arr = [])
-        #set( $discard = $arr.add( null ) ) ## this may be variable...
+        #set( $discard = $arr.add( $NULL ) ) ## this may be variable...
         #set( $discard = $arr.add( "$value" ) )
         #set( $discard = $filterMap.put("$key", $arr))
         #set( $discard = $orderList.add( "$key" ))
