--- a/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
+++ b/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
@@ -746,6 +746,7 @@ rendering.transformations = $xwikiRenderingTransformations
 # Debug
 #-------------------------------------------------------------------------------------
 
+#-# [Since 7.0RC1]
 #-# Indicate if web resources should be loaded minified by default.
 #-# It's enabled by default which can make js/css hard to read.
 # debug.minify=false
