XWIKI-11504: Extension Manager / Distribution wizard should create a downloadable file with all the decisions taken/changes made during the execution XWIKI-11505 Allow EM/DW to re-play an upgrade/install from a file of decisions provided by the user * Add script API to create the replay plan (i.e. modify the history records based on the replay options and preview them) * Add script API to access the replay job status (to be able to display the job progress and the log) * Fix $services.extension.getCurrentJobStatus() (it was looking only at the root group and not at the local/namespace group, like #getCurrentJob() does) * Notify the user on the Extension History section if there is a job in progress (and provide a link in case of a replay job). * Add UI to trigger the replay and to display the replay status/log * Enhance the history UI with more JavaScript * Reuse the code that answers extension job questions (#answerExtensionJobQuestion macro)

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/extension.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/extension.vm
@@ -988,26 +988,30 @@ $namespace##
       #end
     #end
   #elseif ($jobState == 'WAITING')
-    ## Continue an interactive extension job using the data submitted by the user.
-    #set ($questionType = $jobStatus.question.getClass().getName())
-    #if ($questionType.endsWith('.ConflictQuestion'))
-      ## A merge conflict occurred during installation.
-      #set ($discard = $jobStatus.question.setGlobalAction($request.versionToKeep))
-      #set ($discard = $jobStatus.question.setAlways($request.autoResolve.equals('true')))
-    #elseif ($questionType.endsWith('.CleanPagesQuestion'))
-      #foreach ($entry in $jobStatus.question.pages.entrySet())
-        ## Currently there's no string representation of a document reference with parameters (such as locale) that can
-        ## be resolved so what has been submitted is a set of (document reference without locale, locale) pairs.
-        #set ($stringReferenceWithoutLocale = $services.model.serialize($entry.key, 'default'))
-        #set ($localesToDelete = $request.getParameterValues($stringReferenceWithoutLocale))
-        #set ($delete = $localesToDelete && $localesToDelete.contains($entry.key.locale.toString()))
-        #set ($discard = $entry.setValue($delete))
-      #end
-    #end
-    #set ($discard = $jobStatus.answered())
+    #answerExtensionJobQuestion($jobStatus)
   #end
   ## Redirect to extension display.
   $response.sendRedirect("#getExtensionURL()")
+#end
+
+#macro (answerExtensionJobQuestion $jobStatus)
+  ## Continue an interactive extension job using the data submitted by the user.
+  #set ($questionType = $jobStatus.question.getClass().getName())
+  #if ($questionType.endsWith('.ConflictQuestion'))
+    ## A merge conflict occurred during installation.
+    #set ($discard = $jobStatus.question.setGlobalAction($request.versionToKeep))
+    #set ($discard = $jobStatus.question.setAlways($request.autoResolve.equals('true')))
+  #elseif ($questionType.endsWith('.CleanPagesQuestion'))
+    #foreach ($entry in $jobStatus.question.pages.entrySet())
+      ## Currently there's no string representation of a document reference with parameters (such as locale) that can
+      ## be resolved so what has been submitted is a set of (document reference without locale, locale) pairs.
+      #set ($stringReferenceWithoutLocale = $services.model.serialize($entry.key, 'default'))
+      #set ($localesToDelete = $request.getParameterValues($stringReferenceWithoutLocale))
+      #set ($delete = $localesToDelete && $localesToDelete.contains($entry.key.locale.toString()))
+      #set ($discard = $entry.setValue($delete))
+    #end
+  #end
+  #set ($discard = $jobStatus.answered())
 #end
 
 #macro (installExtension $extensionId $extensionVersion $namespaces)
