XWIKI-12135: Text overlaps the button "Upgrade on Farm" when FR language is used

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/widgets/buttonGroup.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/widgets/buttonGroup.css
@@ -99,7 +99,7 @@
 /* Force 100% width on the buttons. The anchors behave nicely. */
 .button-group > .dropdown-menu > input.button,
 .button-group > .dropdown-menu > button {
-  width: 100%;
+  min-width: 100%;
 }
 
 .button-group > .dropdown-menu > input.button:hover,
